Changed db information for testing purposes

--- a/xdb/templates/xdb/bulk_management.html
+++ b/xdb/templates/xdb/bulk_management.html
@@ -625,4 +625,14 @@
 
                 </div>
      </div>
+
+
+
+<script>
+
+    const socket = new WebSocket('{{ ws_or_wss }}://' + currentURLPath + '/ws/export/')
+
+
+</script>
+
 {% endblock content %}
