--- a/xdb/templates/xdb/bulk_management.html
+++ b/xdb/templates/xdb/bulk_management.html
@@ -630,6 +630,7 @@
 
 <script>
 
+    var currentURLPath = window.location.host
     const socket = new WebSocket('{{ ws_or_wss }}://' + currentURLPath + '/ws/export/')
 
 
