Added 'No Posts & No Wins Text'. Changed Button for Post Search. Changed Navbar.

--- a/xdb/static/xdb/assets/css/bulk_management.css
+++ b/xdb/static/xdb/assets/css/bulk_management.css
@@ -41,7 +41,15 @@ input[type=radio] {
     /* appearance:initial; */
 }
 
+.no_posts {
+    display: block;
+    text-align: center;
+}
 
+.no_wins {
+    display: block;
+    text-align: center;
+}
 
 .bulk_management_main_container {
     display: flex;
