--- a/xdb/templates/xdb/bulk_management.html
+++ b/xdb/templates/xdb/bulk_management.html
@@ -57,11 +57,12 @@
                                 <div class="posts_button" id="posts_button_select_all">Select All</div>
                                 <div class="posts_button" id="posts_button_select_wins">Select Wins</div>
                                 <div class="posts_button" id="posts_button_select_non_wins">Select Non-Wins</div>
-                                <div class="posts_button_delete_post" id="posts_button_delete_post">Delete [Needs Doing]</div>
                             </div>
                             
 
                             <div class="posts_added_container">
+
+                                <div class="no_posts">No Posts. Please Search for Posts using the Filter!</div>
 
 
 
@@ -121,7 +122,8 @@
                                         <input type="text" class="username_input date_range_input_end" id="username_input">
                                     </div>
 
-                                    <button class="test-ajax-send-posts"></button>
+                                    
+                                    <div class="posts_button" id="ajax-search-posts">Search</div>
 
          
                                 </div>
@@ -350,7 +352,7 @@
                                                     </div>
 
                                                     <div class="post_wins_cards_container">
-                                                        
+                                                        <div class="no_wins">No Winning Posts Selected. Please Filter/Search for Posts, then Select Winning Posts.</div>
                                                     </div>
 
 
